build: fix `package.json` for testing

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "roots": [
       "<rootDir>"
     ],
+    "testMatch": [
+      "**/week*/**/*.test.js",
+      "**/**/*.test.js"
+    ],
     "modulePaths": [
-      "<rootDir>",
-      "isItInTheList"
+      "<rootDir>"
     ],
     "moduleDirectories": [
       "node_modules",
