--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.2.2",
+    "lodash": "^4.17.21",
     "prettier": "^2.7.1"
   },
   "jest": {
